package Classes;

import AbstractClasses.*;
import Interfaces.ICarry;

import java.util.ArrayList;

public class SingleGroup extends GroupCarry {
    public SingleGroup(ArrayList<ICarry> Carries){
        super(Carries);
    }
}
