package Exceprions;

public class DencityException extends Error{
}
