package Exceprions;

public class MoveException extends Exception{
    public MoveException(String message){
        super(message);
    }
}
